update should now work